--- a/release 1.0/03-frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
+++ b/release 1.0/03-frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
@@ -19,6 +19,39 @@
                     No products found.
                 </div>
             </div>
+            <!--begion pagination -->
+            <div class="footer-pagination">
+                <div class="row">
+                    <div class="col-md-6">
+
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-8" style="padding-left:30%">
+                                <ngb-pagination
+                                [(page)]="thePageNumber"
+                                [pageSize]="thePageSize"
+                                [maxSize]="5"
+                                [boundaryLinks]="true"
+                                [collectionSize]="theTotalElements"
+                                (pageChange)="listProducts()"
+                                >
+
+                                </ngb-pagination>
+                            </div>
+                            <div class="col-md-4">
+                                <span class="pr-2">Page Size</span>
+                                <select #myPageSelect (change)="updatePageSize(myPageSelect.value)">
+                                    <option>5</option>
+                                    <option selected>10</option>
+                                    <option>20</option>
+                                    <option>50</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
