--- a/release 1.0/03-frontend/angular-ecommerce/src/app/components/cart-status/cart-status.component.html
+++ b/release 1.0/03-frontend/angular-ecommerce/src/app/components/cart-status/cart-status.component.html
@@ -1,10 +1,10 @@
 
 <div class="cart-area d-n">
-    <a href="shopping-detail.html">
+    <a routerLink="/cartDetail">
         <div class="total"> {{totalPrice | currency: 'USD'}}
             <span> {{totalQuantity}}</span> 
         </div> 
         <i class="fa fa-shopping-cart"
-            aria-hidden="true"></i>
+            aria-hidden="true" ></i>
     </a>
 </div>
