--- a/release 1.0/03-frontend/angular-ecommerce/src/styles.css
+++ b/release 1.0/03-frontend/angular-ecommerce/src/styles.css
@@ -687,7 +687,7 @@ table.table.table-bordered{
     background:#fff
 }
 .table-bordered td,.table-bordered th{
-    border:1px solid #dee2e6
+    border:1px solid #dee2e6 !important
 }
 table.table.table-bordered th{
     BACKGROUND:#0da8e4;
