adding jenny logo

--- a/release 1.0/03-frontend/angular-ecommerce/src/app/app.component.html
+++ b/release 1.0/03-frontend/angular-ecommerce/src/app/app.component.html
@@ -3,9 +3,9 @@
 	<!-- MENU SIDEBAR-->
 	<aside class="menu-sidebar d-none d-lg-block">
 		<div class="logo">
-			<a href="#">
-				<img src="assets/images/logo.png" alt="luv2shop" class="img-responsive">
-			</a>
+			
+				<img src="assets/images/jenny-logo.png" alt="jenny-shop" style=" object-fit: cover;">
+			
 		</div>
 		<app-product-category-menu></app-product-category-menu>
 	</aside>
