create checkout form groups

--- a/release 1.0/03-frontend/angular-ecommerce/src/styles.css
+++ b/release 1.0/03-frontend/angular-ecommerce/src/styles.css
@@ -512,7 +512,7 @@ input.au-input.au-input-xl{
     background:#fff
 }
 .main-content.page-m{
-    padding:10% 15%!important
+    padding:10% 30% 10% 5%!important
 }
 
 /* 
@@ -580,6 +580,7 @@ input.au-input.au-input-xl{
     z-index:23;
     display:inline-block
 }
+
 .input-space{
     margin-bottom:20px
 }
