--- a/release 1.0/03-frontend/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
+++ b/release 1.0/03-frontend/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
     <div class="section-content section-content-p30">
         <div class="container-fluid">
-            <table class="table table-bordered">
+            <table class="table table-bordered" *ngIf="cartSvc.cartItems.length > 0 else showEmpty">
                 <tr>
                     <th width="20%">Product Image</th>
                     <th width="50%">Product Detail</th>
@@ -28,9 +28,17 @@
                         <p>Total Quantity: {{cartSvc.totalQuantityValue}}</p>
                         <p>Shipping: FREE</p>
                         <p>Total Price: {{cartSvc.totalPriceValue | currency: "USD"}}</p>
+                        <div>
+                            <a class="btn btn-primary btn-sm" routerLink="/checkout"> Checkout</a>
+                        </div>
                     </td>
                 </tr>
             </table>
+            <ng-template #showEmpty>
+                <div  class="alert alert-warning col-md-12" role="alert">
+                    Your shopping cart is empty.
+                </div>
+            </ng-template>
         </div>
     </div>
 </div>
