populate country and state dropdown value and implement change event

--- a/release 1.0/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/release 1.0/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -43,8 +43,10 @@
                         <div class="col-md-2"> <label>Country</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country">
-                                    <option>TO DO</option>
+                                <select formControlName="country" (change)="updateStates('shippingAddress')">
+                                    <option *ngFor="let country of countryList" [ngValue]="country">
+                                        {{country.name}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -73,7 +75,7 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="state">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let state of shippingStateList">{{state.name}}</option>
                                 </select>
                             </div>
                         </div>
@@ -107,8 +109,10 @@
                         <div class="col-md-2"> <label>Country</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country">
-                                    <option>TO DO</option>
+                                <select formControlName="country" (change)="updateStates('billingAddress')">
+                                    <option *ngFor="let country of countryList" [ngValue]="country">
+                                        {{country.name}}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -137,7 +141,7 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="state">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let state of billingStateList">{{state.name}}</option>
                                 </select>
                             </div>
                         </div>
