--- a/release 1.0/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/release 1.0/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -12,6 +12,14 @@
                             <div class="input-space">
                                 <input formControlName="firstName" type="text">
                             </div>
+                            <div *ngIf="firstName && firstName.invalid && (firstName.dirty || firstName.touched)" class="alert alert-danger">
+                                <div *ngIf="firstName && firstName.errors && (firstName.errors['required'] || firstName.errors['notOnlyWhitespace'])">
+                                    First Name is required
+                                </div>
+                                <div *ngIf="firstName && firstName.errors && firstName.errors['minlength']">
+                                    First Name must be at least 2 characters long
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -21,6 +29,14 @@
                             <div class="input-space">
                                 <input formControlName="lastName" type="text">
                             </div>
+                            <div *ngIf="lastName && lastName.invalid && (lastName.dirty || lastName.touched)" class="alert alert-danger">
+                                <div *ngIf="lastName && lastName.errors && (lastName.errors['required'] || lastName.errors['notOnlyWhitespace'])">
+                                    Last Name is required
+                                </div>
+                                <div *ngIf="lastName && lastName.errors && lastName.errors['minlength']">
+                                    Last Name must be at least 2 characters long
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -29,6 +45,14 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="email" type="text">
+                            </div>
+                            <div *ngIf="email && email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
+                                <div *ngIf="email && email.errors && email.errors['required'] ">
+                                    Email is required
+                                </div>
+                                <div *ngIf="email && email.errors && email.errors['pattern']">
+                                    Email must be a valid email address
+                                </div>
                             </div>
                         </div>
                     </div>
