refactor cors setting in configuration

--- a/release 1.0/03-frontend/angular-ecommerce/src/app/components/cart-status/cart-status.component.html
+++ b/release 1.0/03-frontend/angular-ecommerce/src/app/components/cart-status/cart-status.component.html
@@ -1,8 +1,8 @@
 
 <div class="cart-area d-n">
     <a routerLink="/cartDetail">
-        <div class="total"> {{totalPrice | currency: 'USD'}}
-            <span> {{totalQuantity}}</span> 
+        <div class="total"> {{cartService.totalPriceValue | currency: 'USD'}}
+            <span> {{cartService.totalQuantityValue}}</span> 
         </div> 
         <i class="fa fa-shopping-cart"
             aria-hidden="true" ></i>
