--- a/release 1.0/03-frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
+++ b/release 1.0/03-frontend/angular-ecommerce/src/app/components/product-list/product-list.component.html
@@ -3,17 +3,23 @@
     <div class="section-content section-content-p30">
         <div class="container-fluid">
             <div class="row">
-                <div *ngFor="let tempProduct of products" class="col-md-3">
-                    <div class="product-box">
+               
+                <div  *ngFor="let tempProduct of products" class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                    <div class="thumbnail">
                         <a routerLink="/products/{{tempProduct.id}}">
                             <img src="{{ tempProduct.imageUrl}}" class="img-responsive" alt="">
-                            <h1>{{tempProduct.name}}</h1>
+                            <div style="min-height: 46px">{{tempProduct.name}}</div>
                         </a>
-                        <div class="price">{{ tempProduct.unitPrice | currency: "USD"}}</div>
-                        <button class="btn btn-primary btn-sm" (click)="addToCart(tempProduct)"> Add to cart</button>
+                        <div class="caption">
+                            <div class="price">{{ tempProduct.unitPrice | currency: "USD"}}</div>
+                            <button class="btn btn-primary btn-sm" (click)="addToCart(tempProduct)"> Add to cart</button>
+                        </div>
                     </div>
 
                 </div>
+                    
+
+                
                 <!-- if products is empty then display a message-->
                 <div *ngIf="products?.length === 0" class="alert alert-warning col-md-12" role="alert">
                     No products found.
