--- a/release 1.0/03-frontend/angular-ecommerce/src/styles.css
+++ b/release 1.0/03-frontend/angular-ecommerce/src/styles.css
@@ -1038,3 +1038,22 @@ footer ul li{
         padding:8px 0
     }
 }
+
+.thumbnail {
+    display: block;
+    padding: 4px;
+    margin-bottom: 20px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    -webkit-transition: border .2s ease-in-out;
+    -o-transition: border .2s ease-in-out;
+    transition: border .2s ease-in-out;
+    text-align: center;
+}
+
+.thumbnail .caption {
+    padding: 9px;
+  
+}
